--- a/backend/public/login.html
+++ b/backend/public/login.html
@@ -21,7 +21,7 @@
   <div class="container">
     <h2>Login</h2>
     <form id="loginForm">
-      <input type="email" id="email" placeholder="Email" required>
+      <input type="text" id="phone" placeholder="Phone Number" required>
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
@@ -34,27 +34,26 @@
   <script>
     document.getElementById('loginForm').addEventListener('submit', async function(e) {
       e.preventDefault();
-      const email = document.getElementById('email').value;
+      const phone = document.getElementById('phone').value;
       const password = document.getElementById('password').value;
       try {
         const response = await fetch('/api/auth/login', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ email, password })
+          body: JSON.stringify({ phone, password })
         });
         const data = await response.json();
         if (response.ok) {
           // Store token and agentId (if provided) in localStorage.
           localStorage.setItem('token', data.token);
           localStorage.setItem('role', data.role);
-          // If the role is Agent, you might also store the agent's ID.
           if (data.role.toLowerCase() === 'agent') {
             localStorage.setItem('agentId', data.agentId);
             window.location.href = 'agent_dashboard.html';
           } else if (data.role.toLowerCase() === 'admin') {
             window.location.href = 'admin_dashboard.html';
           } else {
-            // For referrers, you could redirect to a different page if needed.
+            // For referrers, you can choose a different redirection if needed.
             window.location.href = 'agent_dashboard.html';
           }
         } else {
