--- a/backend/public/referrer_registration.html
+++ b/backend/public/referrer_registration.html
@@ -28,7 +28,7 @@
       <input type="text" id="bank_name" placeholder="Bank Name" required>
       <input type="text" id="account_number" placeholder="Account Number" required>
       <!-- The referrer self-registration requires a parent referral code -->
-      <input type="text" id="referrer_code" placeholder="Parent Referral Code" required>
+      <input type="text" id="referrer_code" placeholder="Referral Code" required value="REF-CZ7B640D">
       <button type="submit">Register Referrer</button>
     </form>
     <div class="links">
